feat: enforce application lifecycle concurrency [skip ci]
